<resources>
    <string name="app_name">Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Drawer menu -->
    <string name="drawer_menu_create_group">Создать группу</string>
    <string name="drawer_menu_create_secret_chat">Создать секретный чат</string>
    <string name="drawer_menu_create_channel">Создать канал</string>
    <string name="drawer_menu_contacts">Контакты</string>
    <string name="drawer_menu_calls">Звонки</string>
    <string name="drawer_menu_favorites">Избранное</string>
    <string name="drawer_menu_settings">Настройки</string>
    <string name="drawer_menu_invate_friends">Пригласить друзей</string>
    <string name="drawer_menu_help">Вопросы о телеграм</string>

    <string name="default_user_name">Asylzhan Seytbek</string>
    <string name="default_user_phone">+77475762101</string>
    <string name="user_online">В сети</string>
    <string name="default_user_login">aslnstbk</string>

    <!-- Settings -->
    <string name="settings_user_login_change">Имя пользователя</string>
    <string name="settings_user_phone_change_text">Телефон</string>
    <string name="settings_user_bio_change_text">О себе</string>
    <string name="settings_user_bio_text">dev</string>
    <string name="settings_notify_text">Уведомления</string>
    <string name="settings_data_text">Данные и память</string>
    <string name="settings_privacy_text">Конфиденциальность</string>
    <string name="settings_themes_text">Темы и чаты</string>
    <string name="settings_action_menu_edit">Изменить</string>
    <string name="settings_action_menu_exit">Выход</string>

    <string name="register_toolbar_title">Ваш телефон</string>
    <string name="register_phone_number_text">Введите номер</string>
    <string name="register_enter_code_sent_code">Введите код</string>
    <string name="edit_text_hint_phone_number">+7 (---) --- ----</string>
    <string name="edit_text_hint_enter_code">- - - - - -</string>
    <string name="fragment_settings_change_name">Имя</string>
    <string name="fragment_settings_change_surname">Фамилия</string>
    <string name="edit_text_hint_username">Username</string>
    <string name="edit_text_hint_bio">Bio</string>
</resources>