<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment"
    android:background="@color/greyLight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_header_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_profile_image"
            android:layout_width="@dimen/settings_profile_image_width"
            android:layout_height="@dimen/setting_profile_image_height"
            android:src="@drawable/ic_default_user_photo"
            app:civ_circle_background_color="@color/white"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/settings_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_user_name"
            app:layout_constraintStart_toEndOf="@+id/settings_profile_image"
            app:layout_constraintTop_toTopOf="@+id/settings_profile_image"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintBottom_toTopOf="@+id/settings_user_online_status"
            android:layout_marginTop="@dimen/vertical_small_margin"
            />

        <TextView
            android:id="@+id/settings_user_online_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_online"
            app:layout_constraintStart_toEndOf="@+id/settings_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_name"
            android:textColor="@color/greyLight"
            android:textSize="@dimen/text_small"
            android:layout_marginStart="@dimen/horizontal_margin"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/settings_item_large"
        android:id="@+id/settings_item_user_login"
        app:layout_constraintTop_toBottomOf="@+id/settings_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/settings_user_login_icon"
            style="@style/settings_item_icon"
            android:src="@drawable/ic_email"
            app:layout_constraintTop_toTopOf="@id/settings_item_user_login"
            app:layout_constraintStart_toStartOf="@id/settings_item_user_login"
            />

        <TextView
            android:id="@+id/settings_user_login_text"
            style="@style/settings_item_name_text"
            android:text="@string/default_user_login"
            app:layout_constraintTop_toTopOf="@id/settings_item_user_login"
            app:layout_constraintStart_toEndOf="@id/settings_user_login_icon"
            />

        <TextView
            android:id="@+id/settings_user_login_change_text"
            style="@style/settings_item_change_text"
            android:text="@string/settings_user_login_change"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_login_text"
            app:layout_constraintStart_toEndOf="@id/settings_user_login_icon"
            />

        <View
            style="@style/settings_item_divider"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_login_change_text"
            app:layout_constraintStart_toStartOf="@+id/settings_user_login_change_text"
            app:layout_constraintBottom_toBottomOf="@+id/settings_item_user_login"
            app:layout_constraintEnd_toEndOf="@+id/settings_item_user_login"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_item_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/settings_item_large"
        app:layout_constraintTop_toBottomOf="@+id/settings_item_user_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/settings_user_phone_icon"
            style="@style/settings_item_icon"
            android:src="@drawable/ic_phone"
            app:layout_constraintTop_toTopOf="@id/settings_item_user_phone"
            app:layout_constraintStart_toStartOf="@id/settings_item_user_phone"
            />

        <TextView
            android:id="@+id/settings_user_phone_text"
            style="@style/settings_item_name_text"
            android:text="@string/default_user_phone"
            app:layout_constraintTop_toTopOf="@id/settings_item_user_phone"
            app:layout_constraintStart_toEndOf="@id/settings_user_phone_icon"
            />

        <TextView
            android:id="@+id/settings_user_phone_change_text"
            style="@style/settings_item_change_text"
            android:text="@string/settings_user_phone_change_text"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_phone_text"
            app:layout_constraintStart_toEndOf="@id/settings_user_phone_icon"
            />

        <View
            style="@style/settings_item_divider"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_phone_change_text"
            app:layout_constraintStart_toStartOf="@+id/settings_user_phone_change_text"
            app:layout_constraintBottom_toBottomOf="@+id/settings_item_user_phone"
            app:layout_constraintEnd_toEndOf="@+id/settings_item_user_phone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_item_user_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/settings_item_large"
        app:layout_constraintTop_toBottomOf="@+id/settings_item_user_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/settings_user_bio_icon"
            style="@style/settings_item_icon"
            android:src="@drawable/ic_bio"
            app:layout_constraintTop_toTopOf="@id/settings_item_user_bio"
            app:layout_constraintStart_toStartOf="@id/settings_item_user_bio"
            />

        <TextView
            android:id="@+id/settings_user_bio_text"
            style="@style/settings_item_name_text"
            android:text="@string/settings_user_bio_text"
            app:layout_constraintTop_toTopOf="@id/settings_item_user_bio"
            app:layout_constraintStart_toEndOf="@id/settings_user_bio_icon"
            />

        <TextView
            android:id="@+id/settings_user_bio_change_text"
            style="@style/settings_item_change_text"
            android:text="@string/settings_user_bio_change_text"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_bio_text"
            app:layout_constraintStart_toEndOf="@id/settings_user_bio_icon"
            />

        <View
            style="@style/settings_item_divider"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_bio_change_text"
            app:layout_constraintStart_toStartOf="@+id/settings_user_bio_change_text"
            app:layout_constraintBottom_toBottomOf="@+id/settings_item_user_bio"
            app:layout_constraintEnd_toEndOf="@+id/settings_item_user_bio"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_item_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/settings_item_large"
        android:layout_marginTop="@dimen/vertical_small_margin"
        app:layout_constraintTop_toBottomOf="@+id/settings_item_user_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/settings_notify_icon"
            style="@style/settings_item_icon"
            android:src="@drawable/ic_notify"
            app:layout_constraintTop_toTopOf="@id/settings_item_notify"
            app:layout_constraintStart_toStartOf="@id/settings_item_notify"
            />

        <TextView
            android:id="@+id/settings_notify_text"
            style="@style/settings_item_name_text"
            android:text="@string/settings_notify_text"
            app:layout_constraintTop_toTopOf="@id/settings_notify_icon"
            app:layout_constraintBottom_toBottomOf="@id/settings_notify_icon"
            app:layout_constraintStart_toEndOf="@id/settings_notify_icon"
            />

        <View
            style="@style/settings_item_divider"
            app:layout_constraintTop_toBottomOf="@+id/settings_notify_text"
            app:layout_constraintStart_toStartOf="@+id/settings_notify_text"
            app:layout_constraintBottom_toBottomOf="@+id/settings_item_notify"
            app:layout_constraintEnd_toEndOf="@+id/settings_item_notify"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_item_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/settings_item_large"
        app:layout_constraintTop_toBottomOf="@+id/settings_item_notify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/settings_data_icon"
            style="@style/settings_item_icon"
            android:src="@drawable/ic_data_usage"
            app:layout_constraintTop_toTopOf="@id/settings_item_data"
            app:layout_constraintStart_toStartOf="@id/settings_item_data"
            />

        <TextView
            android:id="@+id/settings_data_text"
            style="@style/settings_item_name_text"
            android:text="@string/settings_data_text"
            app:layout_constraintTop_toTopOf="@id/settings_data_icon"
            app:layout_constraintBottom_toBottomOf="@id/settings_data_icon"
            app:layout_constraintStart_toEndOf="@id/settings_data_icon"
            />

        <View
            style="@style/settings_item_divider"
            app:layout_constraintTop_toBottomOf="@+id/settings_data_text"
            app:layout_constraintStart_toStartOf="@+id/settings_data_text"
            app:layout_constraintBottom_toBottomOf="@+id/settings_item_data"
            app:layout_constraintEnd_toEndOf="@+id/settings_item_data"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_item_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/settings_item_large"
        app:layout_constraintTop_toBottomOf="@+id/settings_item_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/settings_privacy_icon"
            style="@style/settings_item_icon"
            android:src="@drawable/ic_privacy"
            app:layout_constraintTop_toTopOf="@id/settings_item_privacy"
            app:layout_constraintStart_toStartOf="@id/settings_item_privacy"
            />

        <TextView
            android:id="@+id/settings_privacy_text"
            style="@style/settings_item_name_text"
            android:text="@string/settings_privacy_text"
            app:layout_constraintTop_toTopOf="@id/settings_privacy_icon"
            app:layout_constraintBottom_toBottomOf="@id/settings_privacy_icon"
            app:layout_constraintStart_toEndOf="@id/settings_privacy_icon"
            />

        <View
            style="@style/settings_item_divider"
            app:layout_constraintTop_toBottomOf="@+id/settings_privacy_text"
            app:layout_constraintStart_toStartOf="@+id/settings_privacy_text"
            app:layout_constraintBottom_toBottomOf="@+id/settings_item_privacy"
            app:layout_constraintEnd_toEndOf="@+id/settings_item_privacy"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_item_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/settings_item_large"
        app:layout_constraintTop_toBottomOf="@+id/settings_item_privacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/settings_themes_icon"
            style="@style/settings_item_icon"
            android:src="@drawable/ic_theme"
            app:layout_constraintTop_toTopOf="@id/settings_item_themes"
            app:layout_constraintStart_toStartOf="@id/settings_item_themes"
            />

        <TextView
            android:id="@+id/settings_themes_text"
            style="@style/settings_item_name_text"
            android:text="@string/settings_themes_text"
            app:layout_constraintTop_toTopOf="@id/settings_themes_icon"
            app:layout_constraintBottom_toBottomOf="@id/settings_themes_icon"
            app:layout_constraintStart_toEndOf="@id/settings_themes_icon"
            />

        <View
            style="@style/settings_item_divider"
            app:layout_constraintTop_toBottomOf="@+id/settings_themes_text"
            app:layout_constraintStart_toStartOf="@+id/settings_themes_text"
            app:layout_constraintBottom_toBottomOf="@+id/settings_item_themes"
            app:layout_constraintEnd_toEndOf="@+id/settings_item_themes"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>